--- a/src/main/resources/com/petrik/egridanielrichard_etlap/add-food-view.fxml
+++ b/src/main/resources/com/petrik/egridanielrichard_etlap/add-food-view.fxml
@@ -1,14 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.petrik.egridanielrichard_etlap.AddFoodView"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
+<GridPane minWidth="200.0" prefHeight="259.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.2"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.petrik.egridanielrichard_etlap.AddController">
+   <columnConstraints>
+      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0"/>
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="57.0" minHeight="0.0" prefHeight="53.0" vgrow="SOMETIMES"/>
+      <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="89.0" vgrow="SOMETIMES"/>
+      <RowConstraints maxHeight="94.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES"/>
+      <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES"/>
+      <RowConstraints maxHeight="90.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES"/>
+   </rowConstraints>
+
+   <Label text="Név :"/>
+   <TextField fx:id="tfFoodName" GridPane.columnIndex="1"/>
+   <Label text="Leírás :" GridPane.rowIndex="1"/>
+   <Label text="Kategória :" GridPane.rowIndex="2"/>
+   <Label text="Ár :" GridPane.rowIndex="3"/>
+   <Button fx:id="addFoodBtn" mnemonicParsing="false" onAction="#addFoodBtnClick" prefHeight="26.0" prefWidth="150.0"
+           text="Hozzáadás" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+   <TextArea fx:id="taFoodDetails" maxHeight="100.0" prefHeight="100.0" prefWidth="100.0" GridPane.columnIndex="1"
+             GridPane.rowIndex="1"/>
+   <ChoiceBox fx:id="cbFoodCategory" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <items>
+         <FXCollections fx:factory="observableArrayList">
+            <String value="előétel"/>
+            <String value="főétel"/>
+            <String value="desszert"/>
+         </FXCollections>
+      </items>
+   </ChoiceBox>
+   <Spinner fx:id="spFoodPrice" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <valueFactory>
+         <IntegerSpinnerValueFactory initialValue="1000" max="9999" min="1" amountToStepBy="10" />
+      </valueFactory>
+   </Spinner>
+</GridPane>
