--- a/src/main/resources/com/petrik/egridanielrichard_etlap/main-view.fxml
+++ b/src/main/resources/com/petrik/egridanielrichard_etlap/main-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2" fx:controller="com.petrik.egridanielrichard_etlap.MainController">
+<VBox prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.petrik.egridanielrichard_etlap.MainController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -13,6 +13,29 @@
          <children>
             <Button fx:id="btnNewFood" mnemonicParsing="false" onAction="#btnNewFoodClick" text="Új étel felvétele" />
             <Button fx:id="btnDeleteFood" mnemonicParsing="false" onAction="#btnDeleteFoodClick" text="Törlés" />
+         </children>
+      </HBox>
+      <Label text="Árnövelés:" />
+      <HBox prefHeight="0.0" prefWidth="460.0" spacing="10.0">
+         <children>
+            <Spinner fx:id="spAmountOfFixRaise">
+                <valueFactory>
+                    <SpinnerValueFactory.IntegerSpinnerValueFactory initialValue="50" max="3000" min="50" amountToStepBy="10" />
+                </valueFactory>
+            </Spinner>
+            <Label text="Fix értékkel" />
+            <Button fx:id="btnRaiseFix" mnemonicParsing="false" onAction="#RaiseFixClick" text="Növelés" />
+         </children>
+      </HBox>
+      <HBox prefHeight="16.0" prefWidth="460.0" spacing="10.0">
+         <children>
+            <Spinner fx:id="spAmountOfPercentRaise">
+                <valueFactory>
+                    <SpinnerValueFactory.IntegerSpinnerValueFactory initialValue="5" max="50" min="5" amountToStepBy="5" />
+                </valueFactory>
+            </Spinner>
+            <Label text="\%-osan" />
+            <Button fx:id="btnRaisePercent" mnemonicParsing="false" onAction="#RaisePercentClick" text="Növelés" />
          </children>
       </HBox>
       <TableView fx:id="foodTable" maxWidth="400.0" prefHeight="275.0" prefWidth="400.0">
